--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">C346-P08 Practical Quiz</string>
+
+    <string-array name="classroom">
+        <item>W66M</item>
+        <item>W67J</item>
+        <item>W67K</item>
+        <item>W66c</item>
+    </string-array>
 </resources>
